--- a/inventory/regionOne/maas.ini
+++ b/inventory/regionOne/maas.ini
@@ -1,12 +1,12 @@
 [all]
-control-plane1-r1 ansible_host=192.168.0.1
+control1 ansible_host=192.168.0.1
 
 [master]
 # ansible master host. Always localhost
 localhost ansible_connection=local
 
 [maas]
-control-plane1-r1 region_ctl=true rack_ctl=true
+control1 region_ctl=true rack_ctl=true
 
 [k8s-cluster:children]
 maas
