--- a/roles/prepare-node/handlers/main.yml
+++ b/roles/prepare-node/handlers/main.yml
@@ -1,3 +1,6 @@
 ---
 - name: restart rsyslog
   service: name=rsyslog state=restarted
+- name: restart kubelet
+  service: name=kubelet state=restarted
+
