--- a/inventory/regionOne/group_vars/all/all.yml
+++ b/inventory/regionOne/group_vars/all/all.yml
@@ -23,7 +23,7 @@ loadbalancer_apiserver_localhost: true
 
 ## Local loadbalancer should use this port instead, if defined.
 ## Defaults to kube_apiserver_port (6443)
-nginx_kube_apiserver_port: 15800
+nginx_kube_apiserver_port: 15808
 
 ### OTHER OPTIONAL VARIABLES
 ## For some things, kubelet needs to load kernel modules.  For example, dynamic kernel services are needed
@@ -35,18 +35,18 @@ kubelet_load_modules: true
 ## Upstream dns servers used by dnsmasq
 #upstream_dns_servers:
 #  - 8.8.8.8
-#  - 8.8.4.4
-
-## There are some changes specific to the cloud providers
-## for instance we need to encapsulate packets with some network plugins
-## If set the possible values are either 'gce', 'aws', 'azure', 'openstack', 'vsphere', 'oci', or 'external'
+#  - 8.8.4.4 ## There are some changes specific to the cloud providers ## for instance we need to encapsulate packets with some network plugins ## If set the possible values are either 'gce', 'aws', 'azure', 'openstack', 'vsphere', 'oci', or 'external'
 ## When openstack is used make sure to source in the openstack credentials
 ## like you would do when using nova-client before starting the playbook.
+## Note: The 'external' cloud provider is not supported. 
+## TODO(riverzhang): https://kubernetes.io/docs/tasks/administer-cluster/running-cloud-controller/#running-cloud-controller-manager
 #cloud_provider:
 
+## kubeadm deployment mode
+kubeadm_enabled: true
 
-## Uncomment to enable experimental kubeadm deployment mode
-#kubeadm_enabled: false
+# Skip alert information
+skip_non_kubeadm_warning: false
 
 ## Set these proxy values in order to update package manager and docker daemon to use proxies
 #http_proxy: ""
@@ -64,9 +64,10 @@ kubelet_load_modules: true
 #additional_no_proxy: ""
 
 ## Certificate Management
-## This setting determines whether certs are generated via scripts or whether a
-## cluster of Hashicorp's Vault is started to issue certificates (using etcd
-## as a backend). Options are "script" or "vault"
+## This setting determines whether certs are generated via scripts.
+## Chose 'none' if you provide your own certificates.
+## Option is  "script", "none"
+## note: vault is removed
 #cert_management: script
 
 ## Set to true to allow pre-checks to fail and continue deployment
@@ -78,4 +79,12 @@ kube_read_only_port: 10255
 ## Set true to download and cache container
 #download_container: true
 
+## Deploy container engine
+# Set false if you want to deploy container engine manually.
+#deploy_container_engine: true
+
+## Set Pypi repo and cert accordingly
+#pyrepo_index: https://pypi.example.com/simple
+#pyrepo_cert: /etc/ssl/certs/ca-certificates.crt
+#
 helm_version: "v2.11.0"
