--- a/roles/deploy_osh/tasks/deploy_contrail.yaml
+++ b/roles/deploy_osh/tasks/deploy_contrail.yaml
@@ -3,6 +3,10 @@
     src: "{{playbook_dir}}/contrail-helm-deployer/helm-toolkit-contrail/charts"
     dest: "{{playbook_dir}}/{{item.path}}/charts"
     state: link
+- name: "{{GROUP}}: {{item.name}}: Check whether helm release exist"
+  shell: "{{helm_bin}} list -q | grep -q {{item.name}} && echo ok || echo nok"
+  register: helm_release
+  changed_when: false
 - name: "{{GROUP}}: {{item.name}}: Deploy"
   shell: "{{helm_bin}} upgrade --install {{item['name']}} {{playbook_dir}}/{{item['path']}} \
          --namespace={{item['namespace']}} {% if force|default(false) %}--force {%endif%}\
@@ -10,5 +14,5 @@
          {% if item['name'] not in ['contrail-thirdparty'] %}
          && {{playbook_dir}}/openstack-helm/tools/deployment/common/wait-for-pods.sh {{item['namespace']}}
          {% endif %}"
-  when: "helm_vars_contrail_common_gen_res.changed"
+  when: "helm_vars_contrail_common_gen_res.changed or helm_release.stdout == 'nok'"
 
