--- a/inventory/regionTwo/group_vars/all/osh.yml
+++ b/inventory/regionTwo/group_vars/all/osh.yml
@@ -6,11 +6,14 @@ k8s_net: "192.168.11.0/24"
 k8s_vlan: 1501
 k8s_iface: "ens4"
 default_gw: "192.168.10.194"
-# TODO
-ntp_srv:
+vip_ip: "192.168.10.10"
+dns_srvs:
+- "192.168.10.194"
+ntp_srvs:
+- "194.190.168.1"
 #---------------------------Images-----------#
 local_docker_registry: "192.168.10.194:5000"
-contrail_tag: "queens-master-418"
+contrail_tag: "queens-master-454"
 osh_tag: 1.0
 pull_policy: "IfNotPresent"
 #---------------------------Ceph-------------#
@@ -24,9 +27,9 @@ mon_osd_full_ratio: .90
 mon_osd_nearfull_ratio: .80
 mon_max_pg_per_osd: 300
 #--------------------------k8s-Helm----------#
-int_domain_suffix: "region2.cloud.local"
+int_domain_suffix: "region2.local"
 ext_domain_suffix: "logistic.lan"
-pod_resources: true
+pod_resources: false
 #--------------------------Infra-------------#
 infra:
   pool_name: 'cloud.infra'
@@ -50,8 +53,7 @@ alertmanager:
 os_release: "queens"
 region: "RegionTwo"
 multi_region:
-  master: true
-service_domain: "default"
+  master: false
 # Generate password and override static.
 # Don't disable it in production env
 gen_passwd: true
@@ -84,7 +86,7 @@ contrail_bgp_asn: 64513
 monitoring: false
 logging: false
 alertmanager_notif:
-  smtp_smarthost: '192.168.0.194:25'
+  smtp_smarthost: '192.168.10.194:25'
   smtp_from: 'alertmanager@example.com'
   smtp_auth_username: 'alertmanager'
   smtp_auth_password: 'password'
