--- a/roles/deploy_osh/tasks/gen_password.yaml
+++ b/roles/deploy_osh/tasks/gen_password.yaml
@@ -16,10 +16,10 @@
 {%- endif %}"
   with_dict:
   - "{{endpoint.value.auth}}"
-  when: "endpoint.key not in  ['ceph_object_store'] and endpoint.value.auth is defined"
+  when: "endpoint.key not in  ['ceph_object_store', 'identity'] and endpoint.value.auth is defined"
 
 # Exception for s3 passwords
-- name: "Gen password for {{endpoint.key}}"
+- name: "Gen password for ceph_object_store"
   set_fact:
     "{{endpoint.key}}_{{item.0}}_{{item.1}}_pwd": "
 {%- if gen_passwd -%}
@@ -31,3 +31,24 @@
   - "{{endpoint.value.auth|list}}"
   - ['access_key', 'secret_key']
   when: "endpoint.key == 'ceph_object_store' and endpoint.value.auth is defined"
+
+# Exception for identity
+- name: "Gen password for identity"
+  set_fact: 
+    "{{endpoint.key}}_{{item.key}}_pwd": "
+{%- if item.value.link is defined -%}
+{%- if gen_passwd -%}
+{{lookup('password', inventory_dir+'/../share_creds/'+item.value.link+'.creds chars=ascii_letters length=15')}}
+{%- else -%}
+{{endpoints[item.value.link.split('.').0]['auth'][item.value.link.split('.').1]['password']}}
+{%- endif -%}
+{%- else -%}
+{%- if gen_passwd -%}
+{{lookup('password', inventory_dir+'/../share_creds/'+endpoint.key+'.'+item.key+'.creds chars=ascii_letters length=15')}}
+{%- else -%}
+{{endpoints[endpoint.key]['auth'][item.key]['password']}}
+{%- endif -%}
+{%- endif %}"
+  with_dict:
+  - "{{endpoint.value.auth}}"
+  when: "endpoint.key == 'identity' and endpoint.value.auth is defined"
