--- a/roles/prepare-node/tasks/pre-k8s.yaml
+++ b/roles/prepare-node/tasks/pre-k8s.yaml
@@ -1,21 +1,31 @@
 ---
-#- block:
-#  - name: "Config network interfaces ({{rollout_mode}}) Ubuntu 18.04"
-#    template:
-#      src: "iface_18_{{rollout_mode}}.conf.j2"
-#      dest: /etc/netplan/60-osh-iface.yaml
-#    register: netplan_config
-#  - name: "Apply new network configuration"
-#    shell: netplan apply
-#  when: "ansible_distribution_version == '18.04'"
-#- block:
-#  - name: "Config network interfaces ({{rollout_mode}}) Ubuntu 16.04"
-#    template:
-#      src: "iface_16_{{rollout_mode}}.conf.j2"
-#      dest: /etc/network/interfaces.d/60-osh-iface.cfg
-#  - name: "Apply new network configuration"
-#    shell: systemctl restart networking && sleep 10
-#  when: "ansible_distribution_version == '16.04'"
+- block:
+  - name: "Config network interfaces ({{rollout_mode}}) Ubuntu 18.04"
+    template:
+      src: "iface_18_{{rollout_mode}}.conf.j2"
+      dest: /etc/netplan/60-osh-iface.yaml
+    register: netplan_config
+  - name: "Apply new network configuration"
+    shell: netplan apply
+  when: "ansible_distribution_version == '18.04'"
+- block:
+  - name: "Config network interfaces ({{rollout_mode}}) Ubuntu 16.04"
+    template:
+      src: "iface_16_{{rollout_mode}}.conf.j2"
+      dest: /etc/network/interfaces.d/60-osh-iface.cfg
+  - name: "Apply new network configuration"
+    shell: systemctl restart networking && sleep 10
+  when: "ansible_distribution_version == '16.04'"
+- name: Add dns servers
+  template: 
+    src: resolved.conf.j2
+    dest: /etc/systemd/resolved.conf
+  register: resovle_restart
+- name: Restart systemd-resolved
+  systemd:
+    name: systemd-resolved
+    state: restarted
+  when: "resovle_restart.changed"
 - name: Disable systemd-timesyncd
   systemd:
     name: systemd-timesyncd
@@ -26,10 +36,8 @@
   with_items:
   - "{{packages}}"
   register: packages
-- name: Ensure ntp is started
-  systemd:
-    name: ntp
-    state: started
+- name: Bring ntp service to valid state
+  systemd: name=ntp state="{% if rack_ctl is defined and rack_ctl|bool%}stopped{%else%}started{%endif%}"
 # Separate kubelet, docker logs from other
 - name: Force store journald logs on disk
   lineinfile:
@@ -75,3 +83,7 @@
     regexp: 'swap'
     state: absent
     path: '/etc/fstab'
+- name: Add ntp config
+  template:
+    src: ntp.conf.j2
+    dest: /etc/ntp.conf
