--- a/inventory/regionOne/group_vars/k8s-cluster/k8s-net-calico.yml
+++ b/inventory/regionOne/group_vars/k8s-cluster/k8s-net-calico.yml
@@ -14,13 +14,14 @@
 # Global as_num (/calico/bgp/v1/global/as_num)
 global_as_num: "64546"
 
-calico_felix_prometheusmetricsenabled: "true"
-calico_felix_prometheusmetricsport: "9091"
 # You can set MTU value here. If left undefined or empty, it will
 # not be specified in calico CNI config, so Calico will use built-in
 # defaults. The value should be a number, not a string.
 # calico_mtu: 1500
 #
+calico_felix_prometheusmetricsenabled: "{{monitoring}}"
+calico_felix_prometheusmetricsport: "19091"
+
 # IPIP tunel enable
 ipip: false
 # #ipip_mode: CrossSubnet
