--- a/roles/deploy_osh/tasks/generate_main.yaml
+++ b/roles/deploy_osh/tasks/generate_main.yaml
@@ -32,13 +32,13 @@
   register: helm_vars_common_gen_res
 - name: Generate OSH rabbitmq cookie
   set_fact:
-    rabbitmq_osh_cookie: "{{oslo_messaging_admin_pwd+region|hash('md5')}}"
+    rabbitmq_osh_cookie: "{{(oslo_messaging_admin_pwd+region)|hash('md5')}}"
 - name: Generate CONTRAIL rabbitmq cookie
   set_fact:
     rabbitmq_contrail_cookie: "{{contrail_endpoints_rabbitmq_pwd|hash('md5')}}"
 - name: Generate Ceph FS ID
   set_fact:
-    ceph_fs_id: "{{identity_admin_pwd+region|to_uuid}}"
+    ceph_fs_id: "{{(identity_admin_pwd+region)|to_uuid}}"
 - name: Generate libvirt sercet uuid
   set_fact:
     rbd_secret_uuid: "{{identity_cinder_pwd|to_uuid}}"
@@ -47,7 +47,7 @@
     horizon_secret_key: "{{oslo_db_horizon_pwd|hash('md5')}}"
 - name: Generate nova metadata sercet key
   set_fact:
-    metadata_secret_key: "{{identity_neutron_pwd+region|hash('md5')}}"
+    metadata_secret_key: "{{(identity_neutron_pwd+region)|hash('md5')}}"
 - name:  Generate CONTRAIL common override values
   template:
     src: helm_vars_contrail_common.yaml.j2
