--- a/roles/deploy_osh/tasks/main.yml
+++ b/roles/deploy_osh/tasks/main.yml
@@ -8,6 +8,11 @@
   - endpoints
   - components
   - replicas
+- name: Import external ceph config
+  include_vars:
+    file: "{{inventory_dir}}/../share_creds/ceph.{{cinder_backup_to_region|lower}}.cred"
+    name: ext_ceph_cinder
+  when: "cinder_backup_to_region"
 - name: Set components with not wait ready status
   set_fact:
     no_wait: 
@@ -76,3 +81,12 @@
   with_items:
   - "{{components.OS_SUPPL}}"
   when: "components.OS_SUPPL is defined"
+- name: Get ceph admin keyring
+  shell: "./kubectl --kubeconfig=admin.conf -n ceph get secret ceph-client-admin-keyring -o jsonpath='{.data.ceph\.client\.admin\.keyring}' | base64 -d | awk -F' = ' '/key/{print $2}'"
+  register: ceph_keyring
+- name: Save ceph connection info
+  copy:
+    content: |
+      keyring: "{{ceph_keyring.stdout}}"
+      mons: "ceph-mon-{{region|lower}}.{{ext_domain_suffix}}"
+    dest: "{{inventory_dir}}/../share_creds/ceph.{{region|lower}}.cred"
