--- a/ansible.cfg
+++ b/ansible.cfg
@@ -8,7 +8,7 @@ gathering = smart
 fact_caching = jsonfile
 fact_caching_connection = /tmp
 stdout_callback = skippy
-library = ./kubespray/library
+library = library:./kubespray/library
 callback_whitelist = profile_tasks
 roles_path = roles:kubespray/roles
 deprecation_warnings=False
