--- a/inventory/regionTwo/group_vars/all/osh.yml
+++ b/inventory/regionTwo/group_vars/all/osh.yml
@@ -1,10 +1,13 @@
 #---------------------------Networks---------#
-ceph_net: "192.168.12.0/24"
-ceph_vlan: 1500
-ceph_iface: "ens5"
-k8s_net: "192.168.11.0/24"
-k8s_vlan: 1501
-k8s_iface: "ens4"
+ceph:
+ net: "192.168.12.0/24"
+ vlan: 1500
+ iface: "ens5"
+ gw: "192.168.12.194"
+k8s:
+ net: "192.168.11.0/24"
+ vlan: 1501
+ iface: "ens4"
 default_gw: "192.168.10.194"
 vip_ip: "192.168.10.10"
 dns_srvs:
